# DropIt

./: Dockerfile  Dockerfile.nginx  README.md  config.py  docker-compose.yml  exceptions.py  main.py  nginx.conf  pyproject.toml  redis_init.py  requirements.txt
app/api/v1/: main.py  upload.py
app/bot/: admin_filter.py  admin_handler.py  bot_service.py  run.py
app/models/: blacklist.py  file.py  user.py
app/repositories/: blacklist.py  file.py  sqlalchemy.py  user.py
app/schemas/: blacklist.py  file.py  user.py
app/services/: blacklist.py  dependencies.py  file.py  user.py
app/static/css/: styles.css
app/static/js/: base.js  file.js
app/static/templates/: 404.html  base.html  deleted.html  file.html
app/tasks/: tasks.py
app/utils/: S3.py  templating.py
migrations/: env.py
migrations/versions/: 16fead08bce2_.py  277a0719f867_.py  3ee1bae41747_.py  ba80bb40cb15_.py
