[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Maksim <knyazev.maksim2852@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.13.2"
fastapi = {extras = ["all"], version = "^0.114.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
